--- a/chrome/includes/cascade-config-mouse.css
+++ b/chrome/includes/cascade-config-mouse.css
@@ -15,17 +15,10 @@
    *  0 places directly in the corner
    */ --uc-status-panel-spacing: 12px;
 
+    --proton-tab-block-margin: 0 !important; 
+    --tab-block-margin: 0 !important; 
+
 }
-
-
-/* remove window control buttons */
-.titlebar-buttonbox-container { display: inherit !important; }
-
-
-#pageActionButton { display: none !important; }
-
-
-
 
 
 /*---+---+---+---+---+---+---+
@@ -47,29 +40,8 @@
    */ --uc-darken-toolbar: .2;
 
 }
-#back-button, #forward-button, #reload-button { display:none!important; }
-#private-browsing-indicator-with-label > label {display: none !important;}
 
-#nav-bar {
-  /* customize this value. */
-  --navbar-margin: -38px;
-
-  margin-top: var(--navbar-margin);
-  margin-bottom: 0;
-  z-index: -100;
-  transition: all 0.1s ease !important;
-  opacity: 0;
-}
-
-#navigator-toolbox:focus-within > #nav-bar,
-#navigator-toolbox:hover > #nav-bar
-{
-  margin-top: 0;
-  margin-bottom: var(--navbar-margin);
-  z-index: 100;
-  opacity: 1;
-}
-
+/* #nav-bar{ box-shadow: 0 1px 0 white !important; */
 
 /*---+---+---+---+---+---+---+
  | U | R | L | — | B | A | R |
@@ -108,13 +80,6 @@
 #page-action-buttons > :not(#urlbar-zoom-button):not(#star-button-box) { display: none !important; }
 
 
-/* Hide the »Go«-arrow in the URL Bar */
-#urlbar-go-button { display: none !important; }
-
-
-
-
-
 /*---+---+---+---+---+---+---+
  | T | A | B | — | B | A | R |
  +---+---+---+---+---+---+---*/
@@ -124,8 +89,8 @@
 
   /*  Allow tabs to have dynamic widths based on
    *  the Tab Bars maximum width
-   */ --uc-active-tab-width:   clamp(100px, 30vw, 300px);
-      --uc-inactive-tab-width: clamp(100px, 10vw, 200px);
+   */ --uc-active-tab-width:   clamp(100px, 20vw, 200px);
+      --uc-inactive-tab-width: clamp(100px, 10vw, 100px);
 
 
   /*  Enable this to always show the Tab Close button
