--- a/chrome/Backup/userChrome.css
+++ b/chrome/Backup/userChrome.css
@@ -28,7 +28,7 @@
 
 
 
-/* @import 'includes/cascade-config-mouse.css';
+@import 'includes/cascade-config-mouse.css';
 @import 'includes/cascade-colours.css';
 
 @import 'includes/cascade-layout.css';
@@ -36,4 +36,5 @@
 @import 'includes/cascade-floating-panel.css';
 
 @import 'includes/cascade-nav-bar.css';
-@import 'includes/cascade-tabs.css'; */
+@import 'includes/cascade-tabs.css';
+@import 'includes/custom-css.css';
