--- a/chrome/Backup/includes/custom-css.css
+++ b/chrome/Backup/includes/custom-css.css
@@ -1,23 +1,25 @@
 
+/* full-screen-api.ignore-widgets = true */
+
+* {
+    scrollbar-width: 10px !important;
+}
 
 /* remove window control buttons */
 .titlebar-buttonbox-container { 
-    display: inherit !important; 
+    display: inherit !important;
 }
 
 #back-button, 
 #forward-button, 
 #reload-button, 
 #home-button, 
-/* #nav-bar-overflow-button, */
+#alltabs-button,
 #urlbar-go-button,
-#pageActionButton
+#pageActionButton,
+#private-browsing-indicator-with-label > label
 {
     display: none !important; 
-}
-
-#private-browsing-indicator-with-label > label {
-    display: none !important;
 }
 
 .tab-background{ 
@@ -31,37 +33,86 @@
     border-radius: 5px !important;
 }
 
+.tabbrowser-tab{
+    padding-top: 2px !important;
+    padding-bottom: 2px !important;
+    /* max-width: 35px !important; min-width: 35px !important; */
+    max-width: 10vw !important; min-width: 10vw !important;
+}
+
 .tabbrowser-tab:not([selected]) .tab-content{
     color: rgb(174, 33, 106) !important;
 }
 
-.tabbrowser-tab{
-    min-height: 35px !important;
-    max-height: 35px !important;
+.tabbrowser-tab:not([selected]){
+    /* Just to show icon */
+    max-width: 35px !important; min-width: 35px !important;
+    
+
+    /* Make inactive tabs visible without hiding */
+    /* max-width: 10vw !important; min-width: 10vw !important; */
 }
+
+.tabbrowser-tab:not([selected]):hover{
+    border-radius: 5px !important;
+    padding-top: 1px !important;
+    padding-bottom: 1px !important;
+    
+    /* Comment out if you would not want to preview tab contents when hover */
+    max-width: 10vw !important; min-width: 10vw !important;
+}
+
+
+
 
 .bookmark-item:hover {
     border: 0.2px solid rgb(174, 33, 106) !important;
     border-radius: 50px !important;
     background: transparent !important;
+    background: transparent !important;
+    background-color: var(--toolbar-bgcolor) !important;
 }
 
 .bookmark-item{
     border: 1px solid transparent !important;
 }
 
-#customizableui-special-spring95{
-    min-width: 30px !important;
-    max-width: 30px !important;
+menupopup {
+    --panel-background: rgb(25, 27, 27) !important;
+    --panel-color: white !important;
 }
 
+#PlacesToolbar menupopup[placespopup="true"] {
+    --arrowpanel-background: rgb(25, 27, 27) !important;
+    --arrowpanel-color: white !important;
+    border: 0 !important;
+    padding-top: 2px !important;
+}
 
+#navigator-toolbox > toolbar:not(#TabsToolbar):not(#toolbar-menubar) menupopup[placespopup] {
+    --moz-appearance: none !important;
+    border: 0 !important;
+    padding-top: 8px !important;
+}
+
+#customizableui-special-spring95,
+#customizableui-special-spring23
+{
+    margin-top: 14px !important;
+    margin-bottom: 14px !important;
+    
+    margin-left: 13px !important;
+    margin-right: 13px !important;
+
+    min-width: 13px !important;
+    max-width: 13px !important;
+    /* background-color: rgb(174, 33, 106) !important; */
+    background: url('../backgrounds/icons/grab.png');
+    background-color: rgb(174, 33, 106) !important;
+    border-radius: 50% !important;
+}
 
 #customization-panelWrapper > .panel-arrowbox > .panel-arrow{ margin-inline-end: initial !important; }
-
-/* #PersonalToolbar{
-    margin-top: 1px !important;
-} */
 
 #urlbar-container:not(:focus-within){
     opacity: 0 !important;
@@ -74,6 +125,10 @@
     background: rgb(25, 27, 27) !important;
 }
 
+#urlbar-input-container{
+    padding-top: 2px !important;
+    padding-bottom: 0px !important;
+}
 
 /* Autohide Navbar */
 /* #nav-bar:not([customizing="true"]):not([inFullscreen]) {
@@ -95,36 +150,11 @@
 
 
 
-/* #navigator-toolbox:hover:not([inFullscreen]) :-moz-any(#nav-bar), */
-#navigator-toolbox:focus-within :-moz-any(#nav-bar){
-    /* min-height: 30px !important;
-    max-height: 30px !important;
-    margin-top: 30px !important; */
-    /* margin-bottom: 30px !important; */
-    transition: all 0.2s ease !important;
-    z-index: 100 !important;
-}
-
-#urlbar-container{
-    /* padding-top: 2px !important; */
-    /* padding-bottom: 2px !important; */
-    /* margin-top: 2px !important; */
-    /* margin-bottom: 2px !important; */
-    /* min-height: 20px !important; */
-    /* max-height: 20px !important; */
-    /* opacity: 1 !important; */
-}
-/* #urlbar-input-container{
-    padding-top: -0px !important;
-    padding-bottom: -5px !important;
-    margin-top: -0px !important;
-} */
-
+/* Autohi Toolbar stuff */
 /* #navigator-toolbox, #navigator-toolbox:not([inFullscreen]){
-    height: 10px !important;
+    height: 15px !important;
     opacity: 0 !important;
     opacity: transparent !important;
-    transition: all 0.5s ease 1.5s !important;
 }
 
 #navigator-toolbox:not([inFullscreen]):hover, #urlbar-input-container:focus-within:focus-visible, #PersonalToolbar:focus-within:focus{
@@ -135,4 +165,9 @@
     opacity: 1 !important;
     transition: all 0.1s ease !important;
     z-index: 99 !important;
+} */
+
+/* #toolbarbutton-badge-stack:focus-within{
+    --uc-urlbar-min-width: 0vw;
+    --uc-urlbar-max-width: 0vw;
 } */
