--- a/chrome/Backup/userChrome.css
+++ b/chrome/Backup/userChrome.css
@@ -38,3 +38,4 @@
 @import 'includes/cascade-nav-bar.css';
 @import 'includes/cascade-tabs.css';
 @import 'includes/custom-css.css';
+@import 'includes/title-buttons.css';
