--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -39,3 +39,5 @@
 @import 'includes/cascade-tabs.css';
 @import 'includes/custom-css.css';
 @import 'includes/title-buttons.css';
+@import 'includes/autohide-bookmarks.css';
+/* @import 'includes/autohide-tool.css'; */
