--- a/chrome/includes/cascade-nav-bar.css
+++ b/chrome/includes/cascade-nav-bar.css
@@ -1,39 +1,48 @@
+:root{
+  --pink-color: #ae216a !important;
+  --grey-color: rgb(15,15,15) !important;
+}
+
 #nav-bar {
 
   padding-block-start: 0px !important;
 
   border:     none !important;
   box-shadow: none !important;
-  background: transparent !important;
+  /* background: transparent !important; */
+  /* background: var(--grey-color); */
 
 }
 
+#nav-bar.browser-toolbar {
+  background: var(--grey-color) !important;
+}
 
 #urlbar,
 #urlbar * {
 
-  padding-block-start: var(--uc-urlbar-top-spacing) !important;
+  padding-block-start: 0px !important;
 
   outline: none !important;
   box-shadow: none !important;
-
 }
 
 
-#urlbar-background { border: transparent !important; }
+#urlbar-background { 
+  border: transparent !important; 
+  background: var(--grey-color) !important;
+}
 
 
 #urlbar[focused='true']
   > #urlbar-background,
 #urlbar:not([open])
-  > #urlbar-background { background: var(--toolbar-field-background-color) !important; }
+  > #urlbar-background { background: var(--grey-color) !important; }
 
 
 #urlbar[open]
-  > #urlbar-background { background: var(--toolbar-field-background-color) !important; }
+  > #urlbar-background { background: var(--grey-color) !important; }
 
-
-.urlbarView-row:hover
-  > .urlbarView-row-inner,
-.urlbarView-row[selected]
-  > .urlbarView-row-inner { background: var(--toolbar-field-focus-background-color) !important; }
+.urlbarView-row[selected]{ 
+  background: var(--grey-color) !important; 
+}
