--- a/chrome/includes/ori/custom-css.css
+++ b/chrome/includes/ori/custom-css.css
@@ -1,15 +1,5 @@
 
 /* full-screen-api.ignore-widgets = true */
-:root{
-    --pink-color: #ae216a !important;
-    --grey-color: rgb(15,15,15) !important;
-}
-:root:not([chromehidden~="toolbar"]){
-    /* min-width: 1090px !important; */
-    max-width: 1090px !important;
-    max-height: 614zpx !important;
-    /* min-height: 618px !important;s */
-}
 
 * {
     scrollbar-width: 10px !important;
@@ -27,7 +17,6 @@
 #alltabs-button,
 #urlbar-go-button,
 #pageActionButton,
-.titlebar-buttonbox-container,
 #private-browsing-indicator-with-label > label
 {
     display: none !important; 
@@ -37,8 +26,8 @@
 
 .tab-content[selected="true"]{
     background: var(--toolbar-bgcolor) !important;
-    background-color: var(--grey-color) !important;
-    border: 2px solid var(--pink-color) !important;
+    background-color: rgb(25, 27, 27) !important;
+    border: 2px solid rgb(174, 33, 106) !important;
     border-radius: 10px !important;
     border-top-left-radius: 10px !important;
     border-top-right-radius: 10px !important;
@@ -49,6 +38,7 @@
 .tabbrowser-tab{
     padding-top: 2px !important;
     padding-bottom: 2px !important;
+    /* max-width: 35px !important; min-width: 35px !important; */
     max-width: 11vw !important; min-width: 11vw !important;
 }
 
@@ -57,23 +47,23 @@
 } */
 
 .tabbrowser-tab:not([selected]) .tab-content{
-    color: var(--pink-color) !important;
-    background-color: var(--grey-color)!important;
+    color: rgb(174, 33, 106) !important;
+    background-color: rgb(25, 27, 27) !important;
     border: 0px !important;
     border-radius: 0px !important;
 }
 .tabbrowser-tab:not([selected]) .tab-content:hover{
-    color: var(--pink-color) !important;
+    color: rgb(174, 33, 106) !important;
     border: none !important;
-    background-color: var(--grey-color) !important;
+    background-color: rgb(25, 27, 27) !important;
 }
 
 .tabbrowser-tab:not([selected]){
     /* Just to show icon */
-    /* max-width: 35px !important; min-width: 35px !important; */
+    max-width: 35px !important; min-width: 35px !important;
     
     /* Make inactive tabs visible without hiding */
-    max-width: 11vw !important; min-width: 11vw !important;
+    /* max-width: 11vw !important; min-width: 11vw !important; */
 }
 
 .tabbrowser-tab:not([selected]):hover{    
@@ -82,7 +72,7 @@
 }
 
 .bookmark-item:hover {
-    border: 0.2px solid var(--pink-color) !important;
+    border: 0.2px solid rgb(174, 33, 106) !important;
     border-radius: 50px !important;
     background: transparent !important;
     background: transparent !important;
@@ -93,32 +83,16 @@
     border: 1px solid transparent !important;
 }
 
-.menupopup {
-    --panel-background: var(--grey-color) !important;
+menupopup {
+    --panel-background: rgb(25, 27, 27) !important;
     --panel-color: white !important;
 }
 
 #PlacesToolbar menupopup[placespopup="true"] {
-    --arrowpanel-background: var(--grey-color) !important;
+    --arrowpanel-background: rgb(25, 27, 27) !important;
     --arrowpanel-color: white !important;
     border: 0 !important;
     padding-top: 2px !important;
-}
-
-#PersonalToolbar{
-    background: var(--grey-color) !important;
-}
-
-.titlebar-spacer{
-    max-width: 5px !important;
-    display: none !important;
-}
-
-#customizableui-special-spring23 {
-    background: var(--pink-color) !important;
-    border: 5px solid var(--grey-color) !important;
-    border-radius: 50% !important;
-    margin: 10px !important;
 }
 
 #navigator-toolbox > toolbar:not(#TabsToolbar):not(#toolbar-menubar) menupopup[placespopup] {
@@ -127,7 +101,7 @@
     padding-top: 8px !important;
 }
 
-/* #customizableui-special-spring95,
+#customizableui-special-spring95,
 #customizableui-special-spring23
 {
     margin-top: 14px !important;
@@ -138,11 +112,11 @@
 
     min-width: 13px !important;
     max-width: 13px !important;
-    background-color: rgb(174, 33, 106) !important;
+    /* background-color: rgb(174, 33, 106) !important; */
     background: url('../backgrounds/icons/grab.png');
-    background-color: var(--pink-color) !important;
+    background-color: rgb(174, 33, 106) !important;
     border-radius: 50% !important;
-} */
+}
 
 #customization-panelWrapper > .panel-arrowbox > .panel-arrow{ margin-inline-end: initial !important; }
 
@@ -154,13 +128,23 @@
 }
 
 #TabsToolbar{
-    background: var(--grey-color) !important;
+    background: rgb(25, 27, 27) !important;
 }
 
 #urlbar-input-container{
     padding-top: 2px !important;
     padding-bottom: 0px !important;
 }
+
+/* Autohide Navbar */
+/* #nav-bar:not([customizing="true"]):not([inFullscreen]) {
+    min-height: 0px !important;
+    max-height: 0px !important;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+    transition: all 0.1s ease !important;
+    z-index: -100 !important;
+} */
 
 #nav-bar:not(:focus-within) {
     min-height: 0px !important;
@@ -172,21 +156,20 @@
 
 
 
-/* Autohide Toolbar stuff
-#navigator-toolbox, #navigator-toolbox:not([inFullscreen]), #urlbar-input-containe:not([inFullscreen]){
+/* Autohi Toolbar stuff */
+/* #navigator-toolbox, #navigator-toolbox:not([inFullscreen]){
     height: 15px !important;
     opacity: 0 !important;
     opacity: transparent !important;
-    transition: all 0.5s ease 4s !important;
 }
 
 #navigator-toolbox:not([inFullscreen]):hover, #urlbar-input-container:focus-within:focus-visible, 
 #PersonalToolbar:focus-within:focus{
     visibility: visible !important;
     margin-top: 1px !important;
-    margin-bottom: 1px !important;
+    margin-bottom: 2px !important;
     height: 39px !important;
     opacity: 1 !important;
-    transition: all 0.5s ease !important;
+    transition: all 0.1s ease !important;
     z-index: 99 !important;
 } */
