added autohide window controls

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -7,6 +7,13 @@
 
 @import 'includes/cascade-nav-bar.css';
 @import 'includes/custom-css.css';
+/* @import 'includes/test.css'; */
+
+
+
+
+
+
 /* @import 'includes/custom-oneliner.css' */
 /* @import 'includes/cascade-tabs.css'; */
 /* @import "https://raw.githubusercontent.com/8mpty/firefox-css-custom/main/chrome/includes/custom-css.css"; */
