--- a/chrome/includes/custom-css.css
+++ b/chrome/includes/custom-css.css
@@ -6,9 +6,13 @@
 }
 :root:not([chromehidden~="toolbar"]){
     /* min-width: 1090px !important; */
-    max-width: 1090px !important;
-    max-height: 614px !important;
     /* min-height: 618px !important;s */
+
+    /* max-width: 1090px !important; */
+    /* max-height: 614px !important; */
+
+    max-width: 1920px !important;
+    max-height: 1080px !important;
 }
 
 * {
@@ -17,7 +21,23 @@
 
 /* remove window control buttons */
 .titlebar-buttonbox-container { 
+    /* display: none !important; */
     display: inherit !important;
+}
+
+.titlebar-restore, .titlebar-max, .titlebar-close{ 
+    visibility: collapse !important;
+
+}
+
+.titlebar-buttonbox-container:hover .titlebar-restore,
+.titlebar-buttonbox-container:hover .titlebar-max,
+.titlebar-buttonbox-container:hover .titlebar-close{
+    visibility: visible !important;
+}
+
+.titlebar-close:hover{
+    background: var(--pink-color) !important;
 }
 
 #back-button, 
@@ -27,8 +47,7 @@
 #alltabs-button,
 #urlbar-go-button,
 #pageActionButton,
-.titlebar-buttonbox-container,
-#private-browsing-indicator-with-label > label
+#private-browsing-indicator-with-label
 {
     display: none !important; 
 }
@@ -114,9 +133,10 @@
     display: none !important;
 }
 
-#customizableui-special-spring23 {
+/* https://stackoverflow.com/questions/5110249/wildcard-in-css-for-classes */
+*[id^='customizableui-special-spring']{
     background: var(--pink-color) !important;
-    border: 5px solid var(--grey-color) !important;
+    border: 6.5px solid var(--grey-color) !important;
     border-radius: 50% !important;
     margin: 10px !important;
 }
@@ -126,23 +146,6 @@
     border: 0 !important;
     padding-top: 8px !important;
 }
-
-/* #customizableui-special-spring95,
-#customizableui-special-spring23
-{
-    margin-top: 14px !important;
-    margin-bottom: 14px !important;
-    
-    margin-left: 13px !important;
-    margin-right: 13px !important;
-
-    min-width: 13px !important;
-    max-width: 13px !important;
-    background-color: rgb(174, 33, 106) !important;
-    background: url('../backgrounds/icons/grab.png');
-    background-color: var(--pink-color) !important;
-    border-radius: 50% !important;
-} */
 
 #customization-panelWrapper > .panel-arrowbox > .panel-arrow{ margin-inline-end: initial !important; }
 
@@ -169,24 +172,3 @@
     margin-bottom: 0px !important;
     z-index: -100 !important;
 }
-
-
-
-/* Autohide Toolbar stuff
-#navigator-toolbox, #navigator-toolbox:not([inFullscreen]), #urlbar-input-containe:not([inFullscreen]){
-    height: 15px !important;
-    opacity: 0 !important;
-    opacity: transparent !important;
-    transition: all 0.5s ease 4s !important;
-}
-
-#navigator-toolbox:not([inFullscreen]):hover, #urlbar-input-container:focus-within:focus-visible, 
-#PersonalToolbar:focus-within:focus{
-    visibility: visible !important;
-    margin-top: 1px !important;
-    margin-bottom: 1px !important;
-    height: 39px !important;
-    opacity: 1 !important;
-    transition: all 0.5s ease !important;
-    z-index: 99 !important;
-} */
