--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,13 +1,14 @@
 /* div.showPrivate.showSearch.container */
-@-moz-document url("about:home"), url("about:blank"), 
-url("about:newtab"), url("about:privatebrowsing"){
-    
-    .showPrivate.showSearch.container { 
-        display: none !important; 
+@-moz-document url("about:home"),
+url("about:blank"),
+url("about:newtab"),
+url("about:privatebrowsing") {
+    .showPrivate.showSearch.container {
+        display: none !important;
         visibility: hidden !important;
     }
 
     body {
-        background: url('backgrounds/gifs/2022-11-25_03-23-03.gif') center/cover no-repeat fixed !important;
+        background: url('backgrounds/imgs/solid-color-image.png') center/cover no-repeat fixed !important;
     }
 }
